[package]
name = "capacitor"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/capacitor"
repository = "https://github.com/krypt0nn/capacitor"
license = "GPL-3.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = 3
lto = "fat"

[dependencies]
anyhow = "1.0"
rand_chacha = "0.9"
rayon = "1.10"
